syntax = "proto3";
package blog.blog;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "blog/blog/params.proto";
import "blog/blog/post_count.proto";
import "blog/blog/stored_post.proto";
// this line is used by starport scaffolding # 1

option go_package = "blog/x/blog/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/blog/blog/params";
  }
  // Queries a PostCount by index.
	rpc PostCount(QueryGetPostCountRequest) returns (QueryGetPostCountResponse) {
		option (google.api.http).get = "/blog/blog/post_count";
	}
// Queries a StoredPost by index.
	rpc StoredPost(QueryGetStoredPostRequest) returns (QueryGetStoredPostResponse) {
		option (google.api.http).get = "/blog/blog/stored_post/{index}";
	}

	// Queries a list of StoredPost items.
	rpc StoredPostAll(QueryAllStoredPostRequest) returns (QueryAllStoredPostResponse) {
		option (google.api.http).get = "/blog/blog/stored_post";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetPostCountRequest {}

message QueryGetPostCountResponse {
	PostCount PostCount = 1 [(gogoproto.nullable) = false];
}
message QueryGetStoredPostRequest {
	  string index = 1;

}

message QueryGetStoredPostResponse {
	StoredPost storedPost = 1 [(gogoproto.nullable) = false];
}

message QueryAllStoredPostRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllStoredPostResponse {
	repeated StoredPost storedPost = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
